--- a/styles.css
+++ b/styles.css
@@ -212,9 +212,9 @@ a:active {
 .ques {
   background-color: rgba(48, 47, 48, 0.61);
   backdrop-filter: blur(3.2px);
-  margin-left: 8%;
+  margin-left: 1%;
   margin-top: 5%;
-  width: 436px;
+  width: 650px;
   padding: 5px;
   font-size: 18px;
   border-radius: 15px;
@@ -223,19 +223,20 @@ a:active {
   color: beige;
   text-align: center;
   float: left;
-  height: 50%;
+  height: 100%;
   float: left;
 }
 .q {
-  background-color: aliceblue;
+  background-color: rgb(9, 9, 9);
   backdrop-filter: blur(3.2px);
   width: 100%;
-  height: 200px;
+  height: 500px;
   border-radius: 15px;
   font-family: "Shippori Antique B1", sans-serif;
-  color: #1f1919;
+  color: #fcd4d4;
   overflow-y: scroll;
   text-overflow: ellipsis;
+  text-align: left;
 }
 /* .ans {
   margin-top: 10px;
